src/test/ui/const-generics/raw-ptr-const-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/raw-ptr-const-param.rs:4:12
   |
LL | #![feature(const_generics, const_compare_raw_pointers)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/raw-ptr-const-param.rs:10:38
   |
LL |     let _: Const<{15 as *const _}> = Const::<{10 as *const _}>;
   |            -----------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `0x[PREFIX]0000000f`, found `0x[PREFIX]0000000a`
   |            |
   |            expected due to this
   |
   = note: expected struct `Const<0x[PREFIX]0000000f>`
              found struct `Const<0x[PREFIX]0000000a>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
